# accounts-backend

./: .gitignore  pyproject.toml  test.py
accounts/: urls.py
accounts/settings/: __init__.py  base.py  dev.py  local.py  production.py
apps/fingerprint/: apps.py
apps/users/: admin.py  tasks.py  urls.py
apps/users/backends/: auth.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: __init__.py  city.py  device.py  security.py  user.py
apps/users/serializers/: __init__.py  jwt.py  user.py
apps/users/utils/: auth.py  functions.py  user.py
apps/users/validators/: auth.py
apps/users/views/: __init__.py  register.py
templates/: base.html  home.html
templates/registration/: logged_out.html
users/: admin.py  tasks.py  urls.py
users/backends/: __init__.py  auth.py
users/migrations/: 0001_initial.py
users/models/: __init__.py  activity.py  balance_change.py  email.py  notification.py  profile.py  region.py  user.py  user_setting.py
users/serializers/: __init__.py  auth.py
users/utils/: auth.py  functions.py  sms.py
users/validators/: user.py
users/views/: __init__.py  auth.py  test.py
